--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,6 +2,26 @@
     box-sizing: border-box;
 }
 
+.calculator__backgrond {
+    background-image: url('../media/images/calculations.jpeg') !important;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    inset: 0;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.calculator__backgrond::before {
+    content: "";
+    background-color: #0000008a;
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100vh;
+}
+
 .wrapper {
     position: relative;
     max-width: 330px;
@@ -11,7 +31,7 @@
 }
 
 .calculator__inner {
-    background-color: rgb(53 53 53);
+    background-color: #1c1b1b;
     border: 1px solid #000;
     padding: 50px;
 }
@@ -55,7 +75,7 @@
 
 .calculator__buttons :last-child>button {
     width: 100%;
-    background-color: #24a424;
+    background-color: #24a424d3;
     color: #fff;
 }
 
@@ -98,14 +118,14 @@
 }
 
 .calculator__signs {
-    background-color: #f79c24c9;
+    background-color: #e04141f6;
     font-size: 30px;
 }
 
 .calculator__signs:focus,
 .calculator__signs-power:focus {
     background-color: #fff;
-    color: #f79c24c9;
+    color: #a30b0b;
 }
 
 .calculator__teg-random {
@@ -138,5 +158,4 @@
 .calculator__buttons-additional.active {
     opacity: 1;
     display: grid;
-
 }
